<resources>
    <string name="app_name">EsFinder - Device Tracker</string>
    <string name="text_content_splash">Whistle &amp; Clap find phone\nAnti phone stealer</string>
    <string name="text_title_splash">Find my phone</string>
    <string name="text_note_splash">This action can contain ads</string>
    <string name="text_next">Next</string>
    <string name="text_content_onboard_1">Whistle &amp; Clap find phone\nAnti phone stealer</string>
    <string name="text_title_onboard_1">Clap Find Phone</string>
    <string name="text_content_onboard_2">Whistle &amp; Clap find phone\nAnti phone stealer</string>
    <string name="text_title_onboard_2">Keep Phone Safe</string>
    <string name="text_content_onboard_3">Whistle &amp; Clap find phone\nAnti phone stealer</string>
    <string name="text_title_onboard_3">Whistle Find Phone</string>
    <string name="text_choose_language">Choose language</string>
    <string name="hi">Hindi</string>
    <string name="fr">French</string>
    <string name="es">Spanish</string>
    <string name="portugal">Portuguese</string>
    <string name="english">English</string>
    <string name="china">China</string>
    <string name="france">France</string>
    <string name="text_tab_title_find_phone">Find Phone</string>
    <string name="text_tab_tittle_anti_theft">Anti-theft</string>
    <string name="text_tab_tittle_lost_phone">Lost Phone</string>
    <string name="text_whistlapone">Whistlapone</string>
    <string name="text_here">I am here!</string>
    <string name="text_activated">Activated</string>
    <string name="text_content_actived">Tap to deactivate when you don’t need it</string>
    <string name="text_deactivate">Deactivated</string>
    <string name="text_content_deactivate">Tap to activate the feature to find phone by clapping or whistling</string>
    <string name="text_ringtone">Ringtone</string>
    <string name="text_volume">Volume</string>
    <string name="text_vibration">Vibration</string>
    <string name="text_flash_rate">Flash rate</string>
    <string name="text_ringtone_on">Ringtone: ON</string>
    <string name="text_ringtone_off">Ringtone: OFF</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="term_condition"><![CDATA[Term & Condition]]></string>
    <string name="policy">Policy</string>
    <string name="version">Version</string>
    <string name="more_apps">More Apps</string>
    <string name="text_choose_sound">Choose sound</string>
    <string name="police_siren">Police Siren</string>
    <string name="hello_male">Hello - male</string>
    <string name="hello_female">Hello - Female</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="close">Close</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="exit">Exit</string>
    <string name="please_click_back_again_to_exit">Please click BACK again to exit</string>
    <string name="text_turn_off">Turn me off</string>
    <string name="text_hear_you">I heard you</string>
    <string name="text_find_clap">Xin chào, tôi vừa lắng nghe tiếng vỗ tay</string>
    <string name="text_click_to_close">Nhấn vào đây để đóng âm thanh</string>
    <string name="text_app_name">EsFinder</string>
    <string name="text_audio_is_listening">Đang lắng nghe âm thanh</string>
    <string name="text_modify">Modify your signal</string>
</resources>