<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_background_screen"
    tools:context=".features.onboard.views.SplashActivity">

    <ImageView
        android:id="@+id/image_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size_100dp"
        android:src="@drawable/icon_content_splash" />

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_splash"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size_32dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/text_title_splash"
        android:textColor="@color/white"
        android:textSize="@dimen/size_32sp" />

    <TextView
        android:id="@+id/text_view_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size_12dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/text_content_splash"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/size_18sp" />

    <ProgressBar
        android:id="@+id/process_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/banner_view"
        android:layout_marginHorizontal="@dimen/size_24dp"
        android:layout_marginBottom="@dimen/size_32dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="50" />

    <TextView
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/process_bar"
        android:layout_marginBottom="@dimen/size_8dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/text_note_splash"
        android:textColor="@color/white" />

    <FrameLayout
        android:id="@+id/banner_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />
</RelativeLayout>