<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_background_screen"
    tools:context=".features.home.views.FindPhoneLockScreenActivity">

    <FrameLayout
        android:id="@+id/layout_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/background_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <ImageView
        android:id="@+id/image_view_icon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/icon_content_splash"
        app:layout_constraintBottom_toBottomOf="@id/layout_image"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintTop_toTopOf="@id/layout_image" />

    <TextView
        android:id="@+id/text_view_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/text_here"
        android:textColor="@color/white"
        android:textSize="@dimen/size_32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_image" />

    <TextView
        android:id="@+id/text_view_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/text_hear_you"
        android:textColor="@color/white"
        android:textSize="@dimen/size_18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_here" />

    <TextView
        android:id="@+id/button_open_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_24dp"
        android:layout_marginBottom="@dimen/size_48dp"
        android:background="@drawable/background_button_primary"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/text_turn_off"
        android:textColor="@color/white"
        android:textSize="@dimen/size_18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>