<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_background_screen"
    tools:context=".features.setting.views.SettingActivity">

    <ImageView
        android:id="@+id/button_back"
        android:layout_width="@dimen/size_24dp"
        android:layout_height="@dimen/size_24dp"
        android:layout_marginStart="@dimen/size_16dp"
        android:src="@drawable/ic_back"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_view_title" />


    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_23dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/banner_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/button_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_setting_item"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/size_12dp">

                <ImageView
                    android:layout_width="@dimen/size_24dp"
                    android:layout_height="@dimen/size_24dp"
                    android:src="@drawable/ic_language" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/size_10dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/language"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_18sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/button_term"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:background="@drawable/background_setting_item"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/size_12dp">

                <ImageView
                    android:layout_width="@dimen/size_24dp"
                    android:layout_height="@dimen/size_24dp"
                    android:src="@drawable/image_term" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/size_10dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/term_condition"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_18sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/button_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:background="@drawable/background_setting_item"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/size_12dp">

                <ImageView
                    android:layout_width="@dimen/size_24dp"
                    android:layout_height="@dimen/size_24dp"
                    android:src="@drawable/icon_policy" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/size_10dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/policy"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_18sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:background="@drawable/background_setting_item"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/size_12dp">

                <ImageView
                    android:layout_width="@dimen/size_24dp"
                    android:layout_height="@dimen/size_24dp"
                    android:src="@drawable/icon_version" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/size_10dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/version"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_18sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:background="@drawable/background_setting_item"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/size_12dp">

                <ImageView
                    android:layout_width="@dimen/size_24dp"
                    android:layout_height="@dimen/size_24dp"
                    android:src="@drawable/icon_more_app" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/size_10dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/more_apps"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_18sp" />


            </LinearLayout>

            <!--            <FrameLayout-->
            <!--                android:id="@+id/frAds"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="@dimen/size_16dp"-->
            <!--                android:visibility="visible"-->
            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                app:layout_constraintStart_toStartOf="parent">-->

            <!--                <include-->
            <!--                    android:id="@+id/includeNative"-->
            <!--                    layout="@layout/shimmer_native_ad_view_medium" />-->

            <!--            </FrameLayout>-->

        </LinearLayout>


    </ScrollView>

    <FrameLayout
        android:id="@+id/banner_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>