<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_background_screen"
    android:padding="@dimen/size_16dp">

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/text_whistlapone"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <ImageView
        android:id="@+id/button_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/text_view_title"
        android:layout_alignBottom="@id/text_view_title"
        android:layout_alignParentEnd="true"
        android:padding="@dimen/size_4dp"
        android:src="@drawable/icon_settings" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_title"
        android:layout_marginTop="@dimen/size_24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_gravity="center"
                android:id="@+id/layout_button_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image_background_power"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/icon_power"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_power" />

            </FrameLayout>

            <TextView
                android:id="@+id/text_view_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_button_power"
                android:layout_marginTop="@dimen/size_16dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center"
                android:textColor="@color/white_gray"
                android:textSize="@dimen/size_16sp"
                tools:text="Inactive" />

            <TextView
                android:id="@+id/text_view_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_status"
                android:layout_marginHorizontal="@dimen/size_16dp"
                android:layout_marginTop="@dimen/size_16dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:textColor="@color/white_gray"
                android:textSize="@dimen/size_16sp"
                android:textStyle="italic"
                tools:text="@string/text_content_deactivate" />

            <FrameLayout
                android:layout_marginTop="@dimen/size_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_layout_modify"
                android:padding="16dp">

                <LinearLayout
                    android:id="@+id/layout_no_modify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/text_view_ringtone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="Ringtone: ON"
                        android:textColor="@color/white"
                        android:textSize="@dimen/size_16sp" />

                    <TextView
                        android:id="@+id/text_view_flash"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:gravity="center"
                        android:text="Flash: ON"
                        android:textColor="@color/white"
                        android:textSize="@dimen/size_16sp" />

                    <TextView
                        android:id="@+id/text_view_modify"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="Modify"
                        android:textColor="@color/white"
                        android:textSize="@dimen/size_16sp" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/layout_modify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_view_title_modify"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="Modify your signal"
                        android:textColor="@color/white"
                        android:textSize="@dimen/size_16sp" />

                    <TextView
                        android:id="@+id/text_view_modify_ringtone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_view_title_modify"
                        android:layout_marginTop="@dimen/size_4dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/text_ringtone"
                        android:textColor="@color/blue2"
                        android:textSize="@dimen/size_16sp" />

                    <TextView
                        android:id="@+id/text_view_value_ringtone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_view_title_modify"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="@dimen/size_4dp"
                        android:drawablePadding="@dimen/size_8dp"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center"
                        android:text="Police Siren"
                        android:textColor="@color/blue2"
                        android:textSize="@dimen/size_16sp"
                        app:drawableEndCompat="@drawable/icon_forward" />

                    <TextView
                        android:id="@+id/text_view_modify_volume"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_view_modify_ringtone"
                        android:layout_marginTop="@dimen/size_4dp"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center"
                        android:text="@string/text_volume"
                        android:textAlignment="center"
                        android:textColor="@color/blue2"
                        android:textSize="@dimen/size_16sp" />

                    <SeekBar
                        android:id="@+id/seek_bar_value_volume"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/text_view_modify_volume"
                        android:layout_alignBottom="@id/text_view_modify_volume"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@id/text_view_modify_volume"
                        android:drawablePadding="@dimen/size_8dp"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center"
                        android:max="100"
                        android:min="0"
                        android:paddingVertical="@dimen/size_8dp"
                        android:progressDrawable="@drawable/custom_progress"
                        android:textSize="@dimen/size_16sp"
                        android:thumb="@null" />

                    <TextView
                        android:id="@+id/text_view_modify_vibration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_view_modify_volume"
                        android:layout_marginTop="@dimen/size_4dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/text_vibration"
                        android:textColor="@color/blue2"
                        android:textSize="@dimen/size_16sp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_value_vibration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/text_view_modify_vibration"
                        android:layout_alignBottom="@id/text_view_modify_vibration"
                        android:layout_alignParentEnd="true"
                        app:thumbTint="@color/blue2"
                        app:trackTint="@color/white" />

                    <TextView
                        android:id="@+id/text_view_modify_flash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_view_modify_vibration"
                        android:layout_marginTop="@dimen/size_4dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/text_flash_rate"
                        android:textColor="@color/blue2"
                        android:textSize="@dimen/size_16sp" />

                    <TextView
                        android:id="@+id/text_view_value_flash_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_view_modify_vibration"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="@dimen/size_4dp"
                        android:drawablePadding="@dimen/size_8dp"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center"
                        android:text="Very quick"
                        android:textColor="@color/blue2"
                        android:textSize="@dimen/size_16sp"
                        app:drawableEndCompat="@drawable/icon_forward" />
                </RelativeLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/frAds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_12dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <include
                    android:id="@+id/includeNative"
                    layout="@layout/shimmer_native_ad_view_medium" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>